--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     <div id="app"></div>
     <script>
       const settings = {
-        tableName: "multi_program1"
+        tableName: "multi_program",
       };
     </script>
     <!-- built files will be auto injected -->
